Update audio source and background image in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Caveat:wght@400..700&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
     
     <!-- Audio Preload Priority -->
-    <link rel="preload" href="https://files.catbox.moe/7l3bbg.mp3" as="audio">
+    <link rel="preload" href="https://files.catbox.moe/4krw1h.mp3" as="audio">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Three.js for 3D Models -->
@@ -563,7 +563,7 @@
     <!-- AUDIO ELEMENT -->
     <!-- PRELOAD AUTO ADDED -->
     <audio id="bg-music" loop preload="auto">
-        <source src="https://files.catbox.moe/7l3bbg.mp3" type="audio/mpeg">
+        <source src="https://files.catbox.moe/4krw1h.mp3" type="audio/mpeg">
     </audio>
 
     <!-- LOADING SCREEN -->
@@ -871,10 +871,10 @@
 
         <!-- Background -->
         <div class="absolute inset-0 z-0 pointer-events-none">
-             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSubIRulzd54wWhkW5arL9YQnSoC2Xo0IgLXw&s" 
-                   class="w-full h-full object-cover opacity-10 blur-sm" alt="Values Background">
+             <img src="https://i.ytimg.com/vi/Gs5TS8kDPSw/maxresdefault.jpg" 
+                   class="w-full h-full object-cover opacity-40 blur-sm" alt="Values Background">
              <!-- Deep rich gradient overlay -->
-             <div class="absolute inset-0 bg-gradient-to-b from-[#0A192F] via-[#112240]/90 to-[#0A192F]"></div>
+             <div class="absolute inset-0 bg-gradient-to-b from-[#0A192F] via-[#112240]/60 to-[#0A192F]"></div>
         </div>
 
         <!-- Handdrawn Connecting Line SVG -->
@@ -1163,10 +1163,6 @@
                 <a href="https://www.youtube.com/@aether.co.39" target="_blank" class="social-link group w-full flex justify-between items-center py-6 border-b border-white/10 hover:border-white/50 transition-colors hoverable">
                     <span class="font-serif text-4xl md:text-6xl italic text-white group-hover:pl-4 transition-all duration-500">YouTube</span>
                     <svg class="social-icon w-8 h-8 md:w-12 md:h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="1.5"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
-                </a>
-                <a href="https://x.com/39Aether" target="_blank" class="social-link group w-full flex justify-between items-center py-6 border-b border-white/10 hover:border-white/50 transition-colors hoverable">
-                    <span class="font-serif text-4xl md:text-6xl italic text-white group-hover:pl-4 transition-all duration-500">X / Twitter</span>
-                    <svg class="social-icon w-8 h-8 md:w-12 md:h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="1.5"><path d="M4 4l11.733 16h4.267l-11.733 -16z"></path><path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path></svg>
                 </a>
             </div>
             <div class="mt-20 text-center opacity-30 font-mono text-[10px]">Aether © 2026. All rights reserved. <br> Designed for Preservation.</div>
