Update game link to new URL

--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                     Immerse yourself in the "Aether Experience" — a digital journey where you uncover hidden cultures, collect rare artifacts, and unlock the essence of Vietnamese destinations through engaging mini-games.
                 </p>
                 
-                <a href="https://aethertravel.netlify.app/" target="_blank" class="game-btn inline-block mt-8 px-10 py-4 border border-white/30 text-white font-mono text-sm uppercase tracking-widest hover:bg-white hover:text-dark transition-all duration-500 hoverable">
+                <a href="https://game.aetherculture.site" target="_blank" class="game-btn inline-block mt-8 px-10 py-4 border border-white/30 text-white font-mono text-sm uppercase tracking-widest hover:bg-white hover:text-dark transition-all duration-500 hoverable">
                     Enter the Simulation
                 </a>
             </div>
