--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                         <div class="absolute top-4 right-4 z-20 bg-black/50 backdrop-blur-md p-2 rounded-full border border-white/10">
                             <img src="https://files.catbox.moe/kr9py2.png" class="h-4 w-auto opacity-80" alt="Logo Stamp">
                         </div>
-                        <img src="https://files.catbox.moe/efasso.jpg" 
+                        <img src="https://files.catbox.moe/ndidth.jpg" 
                              class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Game Preview">
                         
                         <div class="absolute inset-0 bg-gradient-to-t from-dark via-transparent to-transparent opacity-80"></div>
